Added code to test Entity framework connection using code first approach

--- a/DotNet_POC/Web_Layer.csproj
+++ b/DotNet_POC/Web_Layer.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataLayer_POC\Data_Layer.csproj" />
+  </ItemGroup>
+
 </Project>
