Restructured setup for better working congitions. For now, API project is able to connect to get DB data.

--- a/DataLayer_POC/Data_Layer.csproj
+++ b/DataLayer_POC/Data_Layer.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared_Layer\Shared_Layer.csproj" />
+  </ItemGroup>
+
 </Project>
