--- a/DotNet_API_POC/API_Layer.csproj
+++ b/DotNet_API_POC/API_Layer.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataLayer_POC\Data_Layer.csproj" />
+    <ProjectReference Include="..\Shared_Layer\Shared_Layer.csproj" />
   </ItemGroup>
 
 </Project>
