--- a/DotNet_API_POC/appsettings.json
+++ b/DotNet_API_POC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PREDACER;Database=ProductDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=PREDACER;Database=ProductDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
